--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Tuto1"
         tools:targetApi="31">
         <activity
+            android:name=".DiarraActivity"/>
+
+        <activity
             android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
