--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".DiarraActivity"/>
+        <activity
+            android:name=".GreetingActivity"/>
 
         <activity
             android:name=".HomeActivity"
